orchestrators/openshift/templates/aqua-agent.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: aqua-agent
spec:
  template:
    metadata:
      labels:
        app: aqua-agent
      name: aqua-agent
    spec:
      serviceAccount: aqua-account
      hostPID: true
      imagePullSecrets:
        - name: dockerhub
      containers:
      - name: aqua-agent
        image: registry.aquasec.com/enforcer:4.2
        securityContext:
          privileged: true
        volumeMounts:
          - mountPath: /var/run
            name: var-run
          - mountPath: /dev
            name: dev
          - mountPath: /host/sys
            name: sys
            readOnly: true
          - mountPath: /host/proc
            name: proc
            readOnly: true
          - mountPath: /host/etc
            name: etc
            readOnly: true
          - mountPath: /host/opt/aquasec
            name: aquasec
            readOnly: true
          - mountPath: /opt/aquasec/tmp
            name: aquasec-tmp
          - mountPath: /opt/aquasec/audit
            name: aquasec-audit
      volumes:
      - name: var-run
        hostPath:
          path: /var/run
      - name: dev
        hostPath:
          path: /dev
      - name: sys
        hostPath:
          path: /sys
      - name: proc
        hostPath:
          path: /proc
      - name: etc
        hostPath:
          path: /etc
      - name: aquasec
        hostPath:
          path: /opt/aquasec
      - name: aquasec-tmp
        hostPath:
          path: /opt/aquasec/tmp
      - name: aquasec-audit
        hostPath:
          path: /opt/aquasec/audit
