orchestrators/openshift/templates/aqua-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: aqua-db
  labels:
    app: aqua-db
spec:
  ports:
    - port: 5432
  selector:
    app: aqua-db
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: aqua-db
spec:
  template:
    metadata:
      labels:
        app: aqua-db
      name: aqua-db
    spec:
      serviceAccount: aqua-account
      imagePullSecrets:
        - name: dockerhub
      containers:
      - name: aqua-db
        image: registry.aquasec.com/database:4.0
        securityContext:
          privileged: true
        ports:
        - containerPort: 5432
