orchestrators/openshift/templates/aqua-web.yaml
apiVersion: v1
kind: Route
metadata:
  name: aqua-web
spec:
  host: <Public_IP>
  to:
    kind: Service
    name: aqua-web
---
apiVersion: v1
kind: Service
metadata:
  name: aqua-web
  labels:
    app: aqua-web
spec:
  ports:
    - nodePort: 30080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: aqua-web
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: aqua-web
spec:
  template:
    metadata:
      labels:
        app: aqua-web
      name: aqua-web
    spec:
      serviceAccount: aqua-account
      imagePullSecrets:
        - name: dockerhub
      containers:
      - name: aqua-web
        image: registry.aquasec.com/server:4.2
        securityContext:
          privileged: true
        volumeMounts:
          - mountPath: /var/run/docker.sock
            name: docker-socket-mount
        ports:
        - containerPort: 8080
      volumes:
        - name: docker-socket-mount
          hostPath:
            path: /var/run/docker.sock
